Fix visibility of the select-clear icon in jqui theming support

--- a/select2-jquery-ui.css
+++ b/select2-jquery-ui.css
@@ -24,7 +24,7 @@
     margin-top: -3px;
     margin-left: -3px;
     left: initial;
-    right: 5px;
+    right: 23px;
 }
 
 .select2-container.ui-widget .select2-choices .select2-input {
